--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
     <h1 id="Hello"><img src="/Images/very-best-welcome-back-pictures-and-photos-32.png" alt=""></h1>
     <div class="Tvscreen">
-      <h1 id="Goodbye"><img src="/3463.png" alt=""></h1>
+      <h1 id="Goodbye"><img src="/Images/3463.png" alt=""></h1>
     <div class="Tvscreen">
       <table id="table">
         <thead>
@@ -31,12 +31,11 @@
         <tr></tr>
             <th>$99.99</th>
             <th>$79.99</th>
-            <th>$52.49</th>
-            
+            <th>$52.49</th>    
  <tr></tr>
- <th><a href="#"><i class="bi bi-basket"></i></a></th>
- <th><a href="#"><i class="bi bi-basket"></i></a></th>
- <th><a href="#"><i class="bi bi-basket"></i></a></th>
+ <th style="font-size:30px;">Add to basket <a href="#"><i class="bi bi-basket"></i></a></th>
+ <th style="font-size:30px;">Add to basket <a href="#"><i class="bi bi-basket"></i></a></th>
+ <th style="font-size:30px;">Add to basket <a href="#"><i class="bi bi-basket"></i></a></th>
  
 
         </thead>
