--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 
   <div class="Tvscreen">
     <div class="container">
-    <h1 id="Hello"><img src="/Images/very-best-welcome-back-pictures-and-photos-32.png" alt=""></h1>
+    <h1 id="Hello"><img src="Images/very-best-welcome-back-pictures-and-photos-32.png" alt=""></h1>
     <div class="Tvscreen">
-      <h1 id="Goodbye"><img src="/Images/3463.png" alt=""></h1>
+      <h1 id="Goodbye"><img src="Images/3463.png" alt=""></h1>
     <div class="Tvscreen">
       <table id="table">
         <thead>
             <tr>
-                <th><img src="/Images/game1.png" alt="game"></th>
-                <th><img src="/Images/game2.png" alt="game"></th>
-                <th><img src="/Images/game3.png" alt="game"></th>
+                <th><img src="Images/game1.png" alt="game"></th>
+                <th><img src="Images/game2.png" alt="game"></th>
+                <th><img src="Images/game3.png" alt="game"></th>
             </tr>
             <th style="font-size: 20px;">Call of Duty®: Modern Warfare® II - Vault Edition</th>
             <th style="font-size: 20px;">Hogwarts Legacy: Digital Deluxe Edition</th>
