--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 
   <div class="Tvscreen">
     <div class="container">
-    <h1 id="Hello"><img src="Images/very-best-welcome-back-pictures-and-photos-32.png" alt=""></h1>
+    <h1 id="Hello"><img src="images/very-best-welcome-back-pictures-and-photos-32.png" alt=""></h1>
     <div class="Tvscreen">
-      <h1 id="Goodbye"><img src="Images/3463.png" alt=""></h1>
+      <h1 id="Goodbye"><img src="images/3463.png" alt=""></h1>
     <div class="Tvscreen">
       <table id="table">
         <thead>
             <tr>
-                <th><img src="Images/game1.png" alt="game"></th>
-                <th><img src="Images/game2.png" alt="game"></th>
-                <th><img src="Images/game3.png" alt="game"></th>
+                <th><img src="images/game1.png" alt="game"></th>
+                <th><img src="images/game2.png" alt="game"></th>
+                <th><img src="images/game3.png" alt="game"></th>
             </tr>
             <th style="font-size: 20px;">Call of Duty®: Modern Warfare® II - Vault Edition</th>
             <th style="font-size: 20px;">Hogwarts Legacy: Digital Deluxe Edition</th>
@@ -50,12 +50,12 @@
     <div class="TVscreen"></div>
     <div class="container">
      <img 
-     src="/Images/television-tv-png-22275.png" alt="tv" style="width:80%; height: 650px; padding-bottom: 50px; position: relative;">
+     src="images/television-tv-png-22275.png" alt="tv" style="width:80%; height: 650px; padding-bottom: 50px; position: relative;">
     </div>
 
     <div class="TVscreen"></div>
       <div class="container">
-       <img src="/Images/remote.jpeg" alt="remote" style="width:40%"> 
+       <img src="images/remote.jpeg" alt="remote" style="width:40%"> 
         <button class="btn1" id="buttonHi"onclick="TurnOn()"></button>
         <button class="btnX" id="buttonX" onclick="ProductList()"></button>
         <button class="btnY" id="buttonY" onclick="show_hide()"></button>
