--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="TVscreen"></div>
       <div class="container">
        <img src="images/remote.jpeg" alt="remote" style="width:40%"> 
-        <button class="btn1" id="buttonHi"onclick="TurnOn(); TurnOff()"></button>
+        <button class="btn1" id="buttonHi" onclick="TurnOn(); TurnOff(); cancel()"></button>
         <button class="btnX" id="buttonX" onclick="ProductList()"></button>
         <button class="btnY" id="buttonY" onclick="show_hide()"></button>
         <button class="btnB" id="buttonB" onclick="Hello()"></button>
